--- a/EnfoqueMicrolearning.Client/package.json
+++ b/EnfoqueMicrolearning.Client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "enfoque-box-app",
+  "name": "enfoque-microlearning-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
