--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 volumes:
   nextcloud:
   db:
@@ -12,10 +10,10 @@ services:
     volumes:
       - db:/var/lib/mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=example
-      - MYSQL_PASSWORD=example
-      - MYSQL_DATABASE=nextcloud
-      - MYSQL_USER=nextcloud
+      MYSQL_ROOT_PASSWORD: example
+      MYSQL_PASSWORD: example
+      MYSQL_DATABASE: nextcloud
+      MYSQL_USER: nextcloud
 
   mongo:
     image: mongo
@@ -40,20 +38,29 @@ services:
     restart: always
     ports:
       - 8080:80
-    links:
+    depends_on:
       - db
     volumes:
       - nextcloud:/var/www/html
     environment:
-      - MYSQL_PASSWORD=example
-      - MYSQL_DATABASE=nextcloud
-      - MYSQL_USER=nextcloud
-      - MYSQL_HOST=db
+      MYSQL_PASSWORD: example
+      MYSQL_DATABASE: nextcloud
+      MYSQL_USER: nextcloud
+      MYSQL_HOST: db
 
-  mailhog:
-    image: mailhog/mailhog
-    container_name: mailhog
-    restart: always
+  mailpit:
+    image: axllent/mailpit
+    container_name: mailpit
+    restart: unless-stopped
+    command: --enable-chaos
+    volumes:
+      - ./data:/data
     ports:
-      - "1025:1025" # SMTP Server
-      - "8025:8025" # Web UI
+      - 8025:8025
+      - 1025:1025
+    environment:
+      MP_MAX_MESSAGES: 5000
+      MP_DATABASE: /data/mailpit.db
+      MP_SMTP_AUTH_ACCEPT_ANY: 1
+      MP_SMTP_AUTH_ALLOW_INSECURE: 1
+      MP_ENABLE_CHAOS: "true"
