feat: add nextcloud changes

--- a/server/.env.example
+++ b/server/.env.example
@@ -21,10 +21,9 @@ MYSQL_PASSWORD=example
 MYSQL_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
 
 # Nextcloud API Connection
-NEXTCLOUD_HOST=http://nextcloud:8080
+NEXTCLOUD_HOST=http://localhost:8080
 NEXTCLOUD_ADMIN_USER=admin
-NEXTCLOUD_ADMIN_PASSWORD=example
-NEXTCLOUD_URL=${NEXTCLOUD_HOST}
+NEXTCLOUD_ADMIN_PASSWORD=password
 
 # JWT Authentication
 JWT_SECRET=1234
@@ -36,5 +35,5 @@ SMTP_PORT=1025
 SMTP_AUTH=false
 
 # Other configurations
-FOLDER_NAME=Documents
+FOLDER_NAME=Courses
 DEBUG=app:*
