--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,6 +51,8 @@ services:
       MYSQL_DATABASE: nextcloud
       MYSQL_USER: nextcloud
       MYSQL_HOST: mysql
+      NEXTCLOUD_ADMIN_USER: admin
+      NEXTCLOUD_ADMIN_PASSWORD: password
 
   mailpit:
     image: axllent/mailpit:latest
