--- a/server/.env.example
+++ b/server/.env.example
@@ -12,18 +12,12 @@ MONGO_USERNAME=root
 MONGO_PASSWORD=example
 MONGO_DB_URL=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/
 
-# MySQL Database Connection
-MYSQL_HOST=mysql
-MYSQL_PORT=3306
-MYSQL_DATABASE=nextcloud
-MYSQL_USER=nextcloud
-MYSQL_PASSWORD=example
-MYSQL_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
-
-# Nextcloud API Connection
-NEXTCLOUD_HOST=http://localhost:8080
-NEXTCLOUD_ADMIN_USER=admin
-NEXTCLOUD_ADMIN_PASSWORD=password
+# Minio API Connection
+MINIO_ROOT_USER=admin
+MINIO_ROOT_PASSWORD=password
+MINIO_DEFAULT_BUCKET=bucket_one
+MINIO_HOST=localhost
+MINIO_PORT=9000
 
 # JWT Authentication
 JWT_SECRET=1234
@@ -35,5 +29,4 @@ SMTP_PORT=1025
 SMTP_AUTH=false
 
 # Other configurations
-FOLDER_NAME=Courses
 DEBUG=app:*
