--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
+    "minio": "^8.0.5",
     "mongoose": "^8.14.2",
     "node-schedule": "^2.1.1",
     "nodemailer": "^7.0.3",
@@ -16,7 +17,7 @@
     "otp-generator": "^4.0.1",
     "webdav": "^5.8.0"
   },
-  "name": "backend",
+  "name": "server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
