--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,4 +1,4 @@
 health_ping==1.0.1
-python-dotenv==1.0.1
-python-telegram-bot==20.7
-qrcode==7.4.2
+python-dotenv==1.1.0
+python-telegram-bot==22.1.0
+qrcode[pil]==8.2.0
