feat: add routes for external bot access

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -5,13 +5,21 @@ WORKDIR /usr/src/app
 
 # Copy necessary files to the container
 COPY requirements.txt .env main.py ./  
+COPY api/ ./api/
 COPY submodules/ ./submodules/  
 COPY ui/ ./ui/  
 RUN mkdir ./images
 
+# Install SQLite3
+RUN apt-get update && apt-get install -y sqlite3
+
+# Ensure SQLite3 is working
+RUN sqlite3 --version
+
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install python-telegram-bot[job-queue]
+
+EXPOSE 9020
 
 # Set the application command
 CMD ["python", "-u", "./main.py"]
