--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,4 +1,5 @@
+flask[async]==3.1.1
 health_ping==1.0.1
 python-dotenv==1.1.0
-python-telegram-bot==22.1.0
+python-telegram-bot[job-queue]==22.1.0
 qrcode[pil]==8.2.0
