--- a/bot-server/Dockerfile
+++ b/bot-server/Dockerfile
@@ -4,19 +4,13 @@ FROM python:3.13.3
 WORKDIR /usr/src/app
 
 # Copy necessary files to the container
-COPY requirements.txt .env main.py ./
-COPY submodules/ ./submodules/  
-COPY ui/ ./ui/  
-RUN mkdir ./images
-
-# Install SQLite3
-RUN apt-get update && apt-get install -y sqlite3
-
-# Ensure SQLite3 is working
-RUN sqlite3 --version
+COPY requirements.txt .env main.py ./  
+COPY api/ ./api/
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
+
+EXPOSE 9020
 
 # Set the application command
 CMD ["python", "-u", "./main.py"]
