--- a/bot/.env.template
+++ b/bot/.env.template
@@ -1,4 +1,4 @@
 BOT_TOKEN=YOUR_BOT_TOKEN_HERE
 BOT_NAME="telegram-bot"
 DB_PATH="/data/bot.db"
-BOT_SERVER="http://localhost:9020"
+BOT_SERVER="http://host.docker.internal:9020" # host.docker.internal so that container can communicate with host localhost
