--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,9 @@
 # Server Configuration
 PORT=8082
 
+# Client
+CLIENT_URL=http://localhost:8083
+
 # API Keys and Secrets
 API_KEY=1234
 API_SECRET=1234
