feat: add dicebear

--- a/server/.env.example
+++ b/server/.env.example
@@ -31,5 +31,8 @@ SMTP_HOST=localhost
 SMTP_PORT=1025
 SMTP_AUTH=false
 
+# DiceBear
+DICE_BEAR_URL=http://localhost:3000
+
 # Other configurations
 DEBUG=app:*
