--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,13 @@
 services:
+  dicebear:
+    image: dicebear/api:2
+    restart: always
+    ports:
+      - '3000:3000'
+    tmpfs:
+      - '/run'
+      - '/tmp'
+
   minio:
     image: minio/minio
     container_name: minio
@@ -9,15 +18,15 @@ services:
     volumes:
       - minio_data:/data
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - '9000:9000'
+      - '9001:9001'
     command: minio server /data --console-address ":9001"
 
   mongo:
     image: mongo:latest
     restart: on-failure
     ports:
-      - "27017:27017"
+      - '27017:27017'
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=example
@@ -26,7 +35,7 @@ services:
     image: mongo-express:latest
     restart: on-failure
     ports:
-      - "8081:8081"
+      - '8081:8081'
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=root
       - ME_CONFIG_MONGODB_ADMINPASSWORD=example
@@ -41,8 +50,8 @@ services:
     volumes:
       - ./data:/data
     ports:
-      - "8025:8025"
-      - "1025:1025"
+      - '8025:8025'
+      - '1025:1025'
     environment:
       - MP_MAX_MESSAGES=5000
       - MP_DATABASE=/data/mailpit.db
