feat: add base for telegram integration in client and server

--- a/client/.env.example
+++ b/client/.env.example
@@ -2,3 +2,4 @@
 VITE_PORT=8083
 VITE_APP_BASE_URL=http://localhost:8082/api/v1
 VITE_DICE_BEAR_URL=http://localhost:3000
+VITE_BOT_URL=https://t.me/platform_connect_bot
