feat: add telegram send message integration to client and server

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,6 +4,9 @@ PORT=8082
 # Client
 CLIENT_URL=http://localhost:8083
 
+# Bot Server
+BOT_SERVER_URL=http://localhost:9020
+
 # API Keys and Secrets
 API_KEY=1234
 API_SECRET=1234
