feat: add telegram notifications

--- a/server/.env.example
+++ b/server/.env.example
@@ -37,5 +37,9 @@ SMTP_AUTH=false
 # DiceBear
 DICE_BEAR_URL=http://localhost:3000
 
+# Telegram Integration
+## Telegram doesn't allow localhost, needs to be an explicit ip.
+CLIENT_URL_FOR_TELEGRAM=http://127.0.0.1:8083
+
 # Other configurations
 DEBUG=app:*
