chore: fix issue with localhost and 127.0.0.1

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,7 +2,8 @@
 PORT=8082
 
 # Client
-CLIENT_URL=http://localhost:8083
+# 127.0.0.1 has better compatibility with integrations for local testing than localhost.
+CLIENT_URL=http://127.0.0.1:8083
 
 # Bot Server
 BOT_SERVER_URL=http://localhost:9020
