--- a/client/.env.example
+++ b/client/.env.example
@@ -1,5 +1,7 @@
 # Client Configuration
 VITE_PORT=8083
-VITE_APP_BASE_URL=http://localhost:8082/api/v1
+# 127.0.0.1 has better compatibility with integrations for local testing than localhost.
+VITE_HOST=127.0.0.1
+VITE_SERVER_BASE_URL=http://localhost:8082/api/v1
 VITE_DICE_BEAR_URL=http://localhost:3000
 VITE_BOT_URL=https://t.me/platform_connect_bot
